// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`should display cartesian tooltip for point 1`] = `
"<div style="min-width: 100px; color: #5B6372; font-size: 13px; line-height: 18px; margin: 4px 6px">

    3.14
    <br style="color:red; font-size: 15px; line-height: 18px">@42.0009


    <hr style="margin: 7px 0px" class="csdk-border-t">
    !9.877

        <svg style="display: inline-block" viewBox="0 0 24 24" height="18" width="12" xmlns="http://www.w3.org/2000/svg">
        <path d="M6.84 8.5l-2.72-3.175a.5.5 0 1 1 .76-.65l2.998 3.5a.5.5 0 0 1 0 .65l-2.998 3.5a.5.5 0 1 1-.76-.65l2.72-3.175z" fill="#5B6372"></path>
        </svg>

    $1.26

  </div>"
`;

exports[`should display pie tooltip for point 1`] = `
"<div style="min-width: 100px; color: #5B6372; font-size: 13px; line-height: 18px; margin: 4px 6px">

    3.14
    <br style="color:red; font-size: 15px; line-height: 18px">@42.0009 / 20%







  </div>"
`;

exports[`should not contain percent for unsupported column 1`] = `
"<div style="min-width: 100px; color: #5B6372; font-size: 13px; line-height: 18px; margin: 4px 6px">

    3.14
    <br style="color:red; font-size: 15px; line-height: 18px">@42.0009







  </div>"
`;
